# AIR-TYPE

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.MD  install_vcpkg.sh  install_vcpkg_linux.sh  launch_shell.sh  package-lock.json  rfc.txt  vcpkg_cross-build.sh
output/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build_release.sh  check_format.sh  cleaner.sh  compile.sh  output  output2.txt  package.json
output/src/: README.md
output/src/AdvancedTrack/: .gitignore  CMakeLists.txt  cleaner.sh  game-advanced_track
output/src/AdvancedTrack/src/: main.cpp
output/src/AdvancedTrack/src/Game/: Game.cpp  Game.hpp  GameEnum.hpp
output/src/AdvancedTrack/src/Game/EntityCreation/: EntityCreation.cpp
output/src/AdvancedTrack/src/Game/GameEntityCreationManagement/: GameEntityCreationManagement.cpp
output/src/AdvancedTrack/src/Game/GameEntityLoadingManagement/: GameEntityLoadingManagement.cpp
output/src/AdvancedTrack/src/Game/GameGameManagement/: GameGameManagement.cpp
output/src/AdvancedTrack/src/Game/GameManagement/: GameManagement.cpp
output/src/AdvancedTrack/src/Game/GameMenuManagement/: GameMenuManagement.cpp
output/src/AdvancedTrack/src/Game/GameOverManagement/: GameOverManagement.cpp
output/src/AdvancedTrack/src/Game/GameStateManagement/: GameStateManagement.cpp
output/src/AdvancedTrack/src/Game/MenuManagement/: MenuManagement.cpp
output/src/AdvancedTrack/src/Game/StateManagement/: StateManagement.cpp
output/src/AdvancedTrack/src/Game/Utils/: Utils.cpp
output/src/Client/: .gitignore  CMakeLists.txt  README.md  build_release.sh  main.cpp
output/src/Client/assets/new_assets/Hit/: hit.ase
output/src/Client/assets/new_assets/background/: background.ase
output/src/Client/assets/new_assets/enemy/: enemy.ase
output/src/Client/assets/new_assets/explosion/: explosion.ase
output/src/Client/assets/new_assets/flash/: flash.ase
output/src/Client/assets/new_assets/music/: space-asteroids.flp
output/src/Client/assets/new_assets/player/: player.ase
output/src/Client/assets/new_assets/shoot/: shoot.ase
output/src/Client/src/: main.cpp
output/src/Client/src/Game/: Client.cpp  Client.hpp  Game.cpp  Game.hpp  RefactoGame.cpp  RefactoGame.hpp  Tools.cpp  Tools.hpp
output/src/Client/src/Game/ClientEntityManagement/: ClientEntityManagement.cpp
output/src/Client/src/Game/ClientMenuManagement/: ClientMenuManagement.cpp  ClientSetDisplay.cpp
output/src/Client/src/Game/ClientSettingManagement/: ClientSettingManagement.cpp
output/src/Client/src/Game/ClientSoundsManagement/: ClientSoundsManagement.cpp  ClientSoundsManagement.hpp
output/src/Client/src/Game/ClientSpritesManagement/: ClientSpriteManagement.cpp
output/src/Client/src/Game/ClientStateManagement/: ClientStateManagement.cpp
output/src/Client/src/Game/Serializer/: Serializer.cpp  Serializer.hpp
output/src/Client/src/GameState/: GameState.cpp  GameState.hpp
output/src/Client/src/Networking/: Networking.cpp  Networking.hpp
output/src/Client/src/Sfml/: Sfml.cpp  Sfml.hpp
output/src/GameEngine/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  README.md  main  main.cpp  xtmemory.kcg
output/src/GameEngine/Entity/: Entity.hpp
output/src/GameEngine/EntityManager/: CMakeLists.txt  EntityManager.cpp  EntityManager.hpp  README.md
output/src/GameEngine/EntityManager/ComponentManager/: ComponentManager.cpp  ComponentManager.hpp
output/src/GameEngine/EntityManager/ComponentManager/AComponent/: AComponent.cpp  AComponent.hpp
output/src/GameEngine/EntityManager/ComponentManager/IComponent/: IComponent.hpp
output/src/GameEngine/EntityManager/Entity/: Entity.hpp
output/src/GameEngine/EntityManager/Signature/: Signature.hpp
output/src/GameEngine/EntityManager/exceptions/ComponentAlreadyExists/: ComponentAlreadyExists.cpp  ComponentAlreadyExists.hpp
output/src/GameEngine/EntityManager/exceptions/CouldNotAddComponent/: CouldNotAddComponent.cpp  CouldNotAddComponent.hpp
output/src/GameEngine/EntityManager/exceptions/CouldNotAddEntity/: CouldNotAddEntity.cpp  CouldNotAddEntity.hpp
output/src/GameEngine/EntityManager/exceptions/CouldNotCreateEntity/: CouldNotCreateEntity.cpp  (+1 more)
output/src/GameEngine/HmiModule/: CMakeLists.txt  HmiModule.cpp  HmiModule.hpp  README.md
output/src/GameEngine/LocalStorageModule/: LocalStorageModule.cpp  LocalStorageModule.hpp  README.md
output/src/GameEngine/MobModule/: CMakeLists.txt  README.md
output/src/GameEngine/MobModule/Components/: Readme.md
output/src/GameEngine/MobModule/MobManager/: MobManager.cpp  MobManager.hpp  Readme.md
output/src/GameEngine/NetworkingModule/: .gitignore  CMakeLists.txt  NetworkingModule.cpp  NetworkingModule.hpp  README.md  main.cpp
output/src/GameEngine/NetworkingModule/Buffer/: Buffer.cpp  Buffer.hpp  README.md
output/src/GameEngine/NetworkingModule/Client/: Client.cpp  Client.hpp  README.md
output/src/GameEngine/NetworkingModule/Messaging/: Messager.cpp  Messager.hpp  README.md
output/src/GameEngine/NetworkingModule/Serializer/: Serializer.cpp  Serializer.hpp
output/src/GameEngine/NetworkingModule/enums/: NetworkingTypeEnum.hpp  README.md
output/src/GameEngine/NetworkingModule/exceptions/: README.md
output/src/GameEngine/PhysicModule/: CMakeLists.txt  PhysicModule.cpp  PhysicModule.hpp  Readme.md
output/src/GameEngine/PhysicModule/Components/: Readme.md
output/src/GameEngine/PhysicModule/Vector2f/: Vector2f.hpp
output/src/GameEngine/RendererModule/: CMakeLists.txt  Readme.md  RendererModule.cpp  RendererModule.hpp
output/src/GameEngine/RendererModule/Components/: Readme.md
output/src/GameEngine/RendererModule/IRendererComponent/: IRendererComponent.hpp
output/src/GameEngine/RendererModule/RendererComponent/: Readme.md  RendererComponent.hpp
output/src/GameEngine/RendererModule/WindowManager/: Readme.md  Window.cpp  Window.hpp
output/src/Server/: CMakeLists.txt  README.md  build_release.sh  main.cpp
output/src/Server/src/: main.cpp
output/src/Server/src/Serializer/: Serializer.cpp  Serializer.hpp
output/src/Server/src/Server/: Server.cpp  Server.hpp
(+144 files in other folders)
